Fix form alignment.

--- a/src/app/set-password/set-password.component.css
+++ b/src/app/set-password/set-password.component.css
@@ -1,5 +1,6 @@
 .login-block {
     width: 90%;
+    padding: 50px 0;
     margin: 0 auto;
 }
 
